syntax = "proto3";

option csharp_namespace = "UpFlux.Gateway.Server.Protos";

package cloudlogs;

service CloudLogService {
  rpc UploadDeviceLogs (stream LogUploadRequest) returns (LogUploadResponse);
}

message LogMetadata {
  string deviceUuid = 1;
  string fileName = 2;
}

message LogUploadRequest {
  oneof content {
    LogMetadata metadata = 1;
    bytes data = 2;
  }
}

message LogUploadResponse {
  bool success = 1;
  string message = 2;
}
